# python_dsml_mod_2_hw

task1/: create.py  create_tables.sql  pyproject.toml  seed.py  sql_queries.sql
task2/: main.py  pyproject.toml
