[tool.poetry]
name = "python-dsml-mod-2-hw-task-2"
version = "0.1.0"
description = "personal helper -> cats catalog -> using MongoDB"
authors = ["RomanKhakhula <rkhakhula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
